# modular_robot_design

beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/src/: add_two_ints_server.cpp  listener.cpp  talker.cpp
interactive_marker_tutorials/: CMakeLists.txt
interactive_marker_tutorials/src/: simple_marker.cpp
kinect_robot_description/: CMakeLists.txt  package.xml
kinect_robot_gazebo/: CMakeLists.txt  package.xml
kinect_robot_gazebo/launch/: kinect_robot.launch
kinect_robot_gazebo/models/kinect/: kinect.urdf
kinect_robot_gazebo/models/kinect_robot/: model.config  model.sdf
kinect_robot_gazebo/models/kinect_robot_1_1/: model.config  model.sdf
kinect_robot_gazebo/models/mesh_test/: model.config  model.sdf
kinect_robot_gazebo/models/my_vehicle/: model.sdf
kinect_robot_gazebo/models/workspace1/: model.config  model.sdf
kinect_robot_gazebo/worlds/: workspace1.world
my_move_it_tutorials/: CMakeLists.txt  package.xml
rviz_tutorials/: CMakeLists.txt  package.xml
surf_rec/: CMakeLists.txt  package.xml  stl_file.xml
surf_rec/config/: kinect_robot_1_1.yaml
surf_rec/examples/: Output82Obs10TSL4.txt
surf_rec/examples/DH_parameters/: simple_2_dof.txt  simple_2_dof.urdf
surf_rec/include/surf_rec/: URDF.h
surf_rec/launch/: gazebo.launch  kinect_robot_1_1_control.launch  kinect_robot_1_1_gazebo.launch  kinect_robot_1_1_rviz.launch  kinect_robot_1_1_ver_1.launch  point_cloud_assembler.launch  surf_rec.launch  urdf.launch  user_input.launch  visualize_urdf.launch
surf_rec/meshes/HML/: Large_module_part.stl  Medium_module_part.stl
surf_rec/rviz/: kinect_robot_1_1.rviz  point_cloud_view.rviz  point_cloud_view2.rviz  user_input.rviz
surf_rec/sdf/workspace_2/: model.config  model.sdf
surf_rec/sdf/workspace_3/: model.config  model.sdf
surf_rec/src/: URDF.cpp  modular_robotics_panel.cpp  modular_robotics_panel.h  point_cloud_assembler.cpp  point_cloud_frame_change.cpp  point_cloud_generator.cpp  point_cloud_visualizer.cpp  rec_surf_generator.cpp  revolution_command.cpp  rviz_user_input.cpp  save_pclmsg_pcdfile.cpp  triangulation.cpp  urdf_generator.cpp
surf_rec/urdf/: kinect.urdf  kinect_robot_1_1.urdf  modular_robot.urdf  test.urdf
surf_rec/worlds/: many_simple_objects.world
surf_rec/worlds/test/: model.sdf
test/: CMakeLists.txt  package.xml
test/src/: add.cpp  main.cpp
